Toolbar content respects safe area

The content of the toolbar needs to respect the safe area. This CL
fixes the content displayed outside of the safe area by creating a
contentView respecting the safe area boundaries.
The content is added to this view instead of the ToolbarView.

This also makes the back menu dropdown to be displayed inside the safe
area.
It also dismisses it during device rotation.

Bug: 765304, 776340, 764877
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: Ia4f5b8499644b0b406a94a723bde1a6d80928cd0
Reviewed-on: https://chromium-review.googlesource.com/727890
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Reviewed-by: Rohit Rao (ping after 24h) <rohitrao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#510083}
Former-commit-id: bf38224605234c859e7d73b9f5883180bf116524