ios/chrome/browser/ui/browser_view_controller.mm
@@ -2128,6 +2128,7 @@ applicationCommandEndpoint:(id<ApplicationCommands>)applicationCommandEndpoint {
 - (void)dismissPopups {
   [_toolbarCoordinator dismissToolsMenuPopup];
   [self.dispatcher hidePageInfo];
+  [_tabHistoryCoordinator dismissHistoryPopup];
   [self.tabTipBubblePresenter dismissAnimated:YES];
 }
 
